<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".activity.MainActivity"
    android:padding="20dp"
    android:id="@+id/main_layout">

    <TextView
        android:id="@+id/login_link"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:text="@string/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/logo_img"
        android:layout_below="@id/login_link"
        android:contentDescription="@string/logo_alt_text"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:src="@drawable/tj_logo"
        android:scaleType="fitStart"/>

    <TextView
        android:id="@+id/welcome_label"
        android:layout_below="@id/logo_img"
        android:text="@string/welcome_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/google_btn"
        android:layout_below="@id/welcome_label"
        android:text="@string/google_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_button"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/create_account_btn"
        android:layout_below="@id/google_btn"
        android:text="@string/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_button"
        android:textSize="18sp"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_below="@id/create_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_n_condition"
        android:layout_alignParentStart="true"/>


</RelativeLayout>